docs: restructure api documentation pages by tag and use operationId
